--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "DEBUG=app node app.js",
-    "debug":"DEBUG=* node app.js",
+    "start": "DEBUG=app nodemon app.js",
+    "debug": "DEBUG=* nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +14,11 @@
     "chalk": "^4.1.2",
     "debug": "^4.3.4",
     "express": "^4.18.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20"
+  },
+  "nodemonConfig":{
+    "restartable":"rs",
+    "delay":2500
   }
 }
