--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "nodemonConfig":{
     "restartable":"rs",
-    "delay":2500
+    "delay":2500,
+    "env":{
+      "PORT":4000
+    }
   }
 }
