--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "debug": "^4.3.4",
+    "ejs": "^3.1.6",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   },
-  "nodemonConfig":{
-    "restartable":"rs",
-    "delay":2500,
-    "env":{
-      "PORT":4000
+  "nodemonConfig": {
+    "restartable": "rs",
+    "delay": 2500,
+    "env": {
+      "PORT": 3000
     }
   }
 }
