--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
+    "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "mongodb": "^4.10.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "passport": "^0.6.0"
   },
   "nodemonConfig": {
     "restartable": "rs",
