--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "DEBUG=app, app:* nodemon app.js",
+    "start": "DEBUG=app nodemon app.js",
     "debug": "DEBUG=* nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,7 +20,8 @@
     "mongodb": "^4.10.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "nodemonConfig": {
     "restartable": "rs",
